# tiralabra-fill-a-pix

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  solver.py  tasks.py
.github/workflows/: python-app.yml
dokumentaatio/: käyttöohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  työaikakirjanpito.md
dokumentaatio/viikkoraportit/: viikkoraportti-1.md  viikkoraportti-2.md  viikkoraportti-3.md  viikkoraportti-4.md  viikkoraportti-5.md  viikkoraportti-6.md
src/: fill_a-pix_printer.py  fillapix.py  fillapixprinter.py  macro.xlsm  result_to_excel.py  solver.py
src/games/: Advanced Logic Fill-a-Pix 10x10.csv  Advanced Logic Fill-a-Pix 20x20.csv  Basic Logic Fill-a-Pix 10x10.csv  Basic Logic Fill-a-Pix 15x15.csv  Basic Logic Fill-a-Pix 20x20.csv  Fill-a-Pix 100x60.csv
src/tests/: solver_test.py
