[tool.poetry]
name = "tiralabra-fill-a-pix"
version = "0.1.0"
description = ""
authors = ["Shmuli02 <samuli.kaleva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.9.6"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
